# waferlens

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_throughput.py  numpy_baseline.py  roofline_profile.py
include/waferlens/: wafer_features.h  waferlens.h
probe/: __init__.py  compare_models.py  faithfulness.py  perturbations.py  prompt_builder.py  run_probe.py  vlm_client.py
python/tests/: conftest.py  test_features.py
python/waferlens/: __init__.py  _core.cpp
src/: wafer_analyzer.cpp
src/cpu/: angular_histogram.cpp  angular_histogram.h  connected_components.cpp  connected_components.h  density_gradient.cpp  density_gradient.h  edge_concentration.cpp  edge_concentration.h  radial_density.cpp  radial_density.h  ring_score.cpp  ring_score.h  scratch_linearity.cpp  scratch_linearity.h
src/kernels/: angular_histogram.cu  connected_components.cu  cuda_dispatch.cu  cuda_dispatch.h  density_gradient.cu  radial_density.cu  scratch_linearity.cu
tests/cpp/: test_features.cpp
